fixed a visual bug on mobile

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
